crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_calibration_method_all_variants.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: methods
---
[
    MinMax,
    Percentile(
        99.0,
    ),
    MSE,
]
