crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_i2s_layout_field_values.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: "format!(\"block_size={} bytes_per_block={} data_bytes={} scale_bytes={}\",\nlayout.block_size, layout.bytes_per_block, layout.data_bytes_per_block,\nlayout.scale_bytes_per_block)"
---
block_size=32 bytes_per_block=10 data_bytes=8 scale_bytes=2
