crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_int4_config_default_debug.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: cfg
---
Int4QuantConfig {
    group_size: 128,
    symmetric: true,
    block_wise: true,
}
