crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_int4_quantize_empty.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: "format!(\"num_groups={} len={}\", params.num_groups, packed.len)"
---
num_groups=0 len=0
