crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_int4_quantize_per_tensor.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: "format!(\"num_groups={} group_size={} len={}\", params.num_groups,\nparams.group_size, packed.len)"
---
num_groups=1 group_size=16 len=16
