crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_int8_config_default_debug.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: cfg
---
Int8QuantConfig {
    per_channel: true,
    symmetric: true,
    calibration_method: MinMax,
}
