crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_nibble_packed_roundtrip.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: unpacked
---
[
    -8,
    -4,
    -1,
    0,
    1,
    4,
    7,
    3,
]
